--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "devaslanphp/filament-avatar-provider",
-    "description": "A complete user avatar provider for Filament",
+    "name": "devaslanphp/filament-avatar",
+    "description": "A complete and customizable User Avatar provider for your Filament project, and also for any project using a User Model.",
     "keywords": [
         "filament",
         "user",
         "avatar",
         "provider"
     ],
-    "homepage": "https://github.com/devaslanphp/filament-avatar-provider",
+    "homepage": "https://github.com/devaslanphp/filament-avatar",
     "require": {
         "php": "^8.0",
         "spatie/laravel-package-tools": "^1.9"
