Small typo on composer file

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Devaslanphp\\FilamentAvatarProvider\\FilamentAvatarProviderProvider"
+                "Devaslanphp\\FilamentAvatar\\FilamentAvatarProvider"
             ]
         }
     },
